fixed issue with mobile width overflowing right in home page

--- a/src/app/components/WeDealWith/WeDealWith.module.css
+++ b/src/app/components/WeDealWith/WeDealWith.module.css
@@ -358,6 +358,8 @@
     height: 0px;
     width: 0px;
     visibility: hidden;
+    position: relative;
+    right: 99999px;
   }
 
   .visibleInMobile {
